--- a/demopage/public/index.html
+++ b/demopage/public/index.html
@@ -10,7 +10,7 @@
 
 		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
 
-		<title>React</title>
+		<title>Pokédex</title>
 
 		<style>
 			* {
