--- a/demopageone/public/index.html
+++ b/demopageone/public/index.html
@@ -3,14 +3,22 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./assets/favicon.ico" />
-		<link rel="manifest" href="./assets/manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Web site created using create-react-app" />
 		<title>React App</title>
-
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 		<style>
 			* {
 				margin: 0%;
+				font-family: 'Bebas Neue', sans-serif !important;
+				font-weight: 400;
+				font-style: normal;
+				color: #f8f8f8 !important;
+			}
+			a {
+				color: #f8f8f8 !important;
 			}
 		</style>
 	</head>
