--- a/demopageone/public/index.html
+++ b/demopageone/public/index.html
@@ -5,22 +5,14 @@
 		<link rel="icon" href="./assets/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Web site created using create-react-app" />
-		<title>React App</title>
+		<title>VALORANT</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-		<style>
-			* {
-				margin: 0%;
-				font-family: 'Bebas Neue', sans-serif !important;
-				font-weight: 400;
-				font-style: normal;
-				color: #f8f8f8 !important;
-			}
-			a {
-				color: #f8f8f8 !important;
-			}
-		</style>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
